@@ -1,3 +1,5 @@
+2006/1/18 -- released version 20060118_trunk
+
 2006/1/17 -- released version 20060117_trunk
 
 2006/1/16 -- released version 20060116_trunk
